modules/aws/vpc/route_table.tf
resource "aws_route_table" "rtbl" {
  vpc_id = aws_vpc.vpc.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }
  tags = local.common_tags
}

resource "aws_route_table_association" "public-subnet-1-route-table-association" {
  subnet_id      = aws_subnet.pub-sub2.id
  route_table_id = aws_route_table.rtbl.id
}
